# serverless-ai-cookbook

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  README.md  SECURITY.md
agents/mcp-server-endpoint/: Dockerfile  README.md
agents/mcp-server-endpoint/src/: bridge.py  server.py
agents/openclaw/: README.md
agents/sipa-mll-router/: Dockerfile  README.md  deploy.sh
agents/sipa-mll-router/src/: main.py
docs/superpowers/plans/: 2026-05-08-parabricks-on-nebius.md
docs/superpowers/specs/: 2026-05-08-parabricks-on-nebius-design.md
inference/nim-endpoint/: README.md
inference/nim-endpoint/scripts/: deploy-nim.sh
life-science/: README.md
life-science/bionemo-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
life-science/bionemo-agent/bionemo_agent/: __init__.py  catalog.py  register.py  self_hosted_service.py  service_smoke.py  smoke.py  tools.py
life-science/bionemo-agent/configs/: config.yml
life-science/bionemo-agent/scripts/: build_bionemo_service_image.sh  build_image.sh  check_bionemo_model_service.sh  run_local.sh  run_local_fullstack.sh  run_self_hosted_bionemo_endpoint.sh  run_self_hosted_bionemo_job_smoke.sh  run_serverless_endpoint.sh  run_serverless_job_smoke.sh
life-science/bionemo-agent/self-hosted-bionemo/: Dockerfile  requirements.txt
life-science/bionemo-agent/tests/: test_self_hosted_service.py  test_tools.py
life-science/bionemo-nim-endpoints/: README.md
life-science/monai-medical-imaging-job/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
life-science/monai-medical-imaging-job/monai_job/: __init__.py  run.py
life-science/monai-medical-imaging-job/scripts/: run_docker.sh  run_serverless.sh
life-science/openmm-simulation/: Dockerfile
life-science/parabricks-deepvariant/: .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  pyproject.toml
life-science/parabricks-deepvariant/bench/: run_bench.sh
life-science/parabricks-deepvariant/bench/results/: 2026-05-08-b200.md  2026-05-08-b300.md  2026-05-08-l40s.md  2026-05-08-rtx6000.md  2026-05-11-h200.md  2026-05-20-b200.md  2026-05-20-b300.md  2026-05-20-h200.md  2026-05-20-rtx6000.md
life-science/parabricks-deepvariant/pipeline/: cli.py  run.py  stage.py
life-science/parabricks-deepvariant/qa/: Dockerfile  requirements.txt  validate.py
life-science/parabricks-deepvariant/scripts/: run_nvidia_tutorial.sh  run_qa.sh  run_serverless.sh  stage_demo_data.sh
life-science/parabricks-deepvariant/tests/: conftest.py  test_cli.py  test_run.py  test_stage.py  test_validate.py
robotics/isaac-for-healthcare-sdg/: .gitignore  README.md
robotics/lerobot-finetune-job/: README.md
robotics/smolva-ft-norma-core/: README.md
skills/: README.md
skills/nebius-container-registry/: SKILL.md
skills/nebius-serverless-endpoint/: SKILL.md
skills/nebius-serverless-job/: SKILL.md
skills/nebius-serverless-platform/: SKILL.md
skills/nebius-serverless-recipes/: SKILL.md
training/train-and-serve/: README.md
(+2 files in other folders)
