[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebius-monai-medical-imaging-job"
version = "0.1.0"
description = "Synthetic MONAI medical-imaging inference job for Nebius Serverless AI"
requires-python = ">=3.11"
authors = [
    {name = "Nebius", email = "opensource@nebius.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "boto3>=1.34",
    "matplotlib>=3.8",
    "monai==1.5.2",
    "nibabel>=5.2",
    "numpy>=1.26",
]

[project.scripts]
monai-medical-imaging-job = "monai_job.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
include = ["monai_job/*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

