[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebius-parabricks-deepvariant"
version = "0.1.0"
description = "Serverless Parabricks DeepVariant pipeline on Nebius"
requires-python = ">=3.11"
authors = [
    {name = "Rene Schonfelder", email = "rene@nebius.com"},
]
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
include = ["pipeline/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-q"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
